<resources>
    <string name="app_name">Exchanger2</string>
    <string name="email_hint">Enter yout email</string>
    <string name="password_hint">Enter your password</string>
    <string name="btn_register">Register</string>
    <string name="already_registered">Already Registered? Sign in here</string>
    <string name="sign_up">Not have an account? Sign up here</string>
    <string name="btn_logIn">Log in</string>
    <string name="user_login_txt">User Login</string>
    <string name="user_registration_txt">User registration</string>
    <string name="profile_desc">Profile</string>
    <string name="log_out">Log out</string>
    <string name="logged_user_greeting">Welcome %s</string>
    <string name="sample_user_name">TomKo1</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_verify_email">VerifyEmailActivity</string>
    <string name="verify_email_msg">Please verify your email</string>
    <string name="btn_resend_email">Resend verification Email</string>

    <!-- *****************************************************************-->

    <string name="password_or_email_empty">Password or E-mail is empty</string>
    <string name="loging_in_dots">Loging in...</string>
    <string name="signed_out">Signed out</string>
    <string name="registering_dots">Registering...</string>
    <string name="registered_success_please_confirm_email">Registered Successfully - please confirm your email</string>
    <string name="user_greetings_formatted">Welcome %1$s</string>
    <string name="profile_name">TomKo1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="country_location">Poland</string>
    <string name="select_birth_date">Birth Date</string>
    <string name="save_edit">Save edit</string>
    <string name="edit_profile_country">Edit Profile Country</string>
    <string name="edit_profile_phone">Edit profile phone</string>
    <string name="edit_profile_description">Edit profile description</string>
    <string name="edit_profile_name">Edit Profile name</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_char">Chat</string>
    <string name="menu_submenu_settings">Settings</string>
    <string name="edit_fields_not_empty">All fields must be filled</string>
    <string name="profile_info_updated">Update successful</string>
    <string name="error_occured_pls_try_later">Error occures - please try later.</string>
    <string name="please_click_btn_to_sel_the_date">Please click \'Birth Date\' to select the date</string>
    <string name="initial_edit_desc_word_count">100</string>


</resources>
