<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_char"/>
    </group>

    <item android:title="@string/menu_submenu_settings">
        <menu>
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/menu_edit_profile"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="@string/menu_settings" />

        </menu>
    </item>

</menu>