<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomek.exchanger2.LoginActivity">

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tomek.exchanger2.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textLogIn"
            android:text="@string/user_login_txt"/>
    <EditText
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLogEmail"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLogPassword"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>
    <Button
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogIn"
        android:text="@string/btn_logIn"/>
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textSignUp"
        android:text="@string/sign_up" />


</LinearLayout>

    </android.support.constraint.ConstraintLayout>
