<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp_padding"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_profile_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="@dimen/_12dp_padding"
        android:textSize="@dimen/_12sp_text_size"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_profile_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_profile_country"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_12dp_padding"
        android:textSize="@dimen/_12dp_padding"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/_16dp_margin_top"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_profile_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="@dimen/_12dp_padding"
        android:textSize="@dimen/_12sp_text_size"
        android:background="@drawable/bottom_border"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/_8dp_margin_Top"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8dp_margin_Top">
        <EditText
            android:id="@+id/edit_profile_description"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"
            android:hint="@string/edit_profile_description"
            android:inputType="text|textMultiLine"
            android:maxLines="2"
            android:maxLength="100"
            android:layout_margin="@dimen/_0dp_margin"
            android:textSize="@dimen/_12sp_text_size"
            android:background="@drawable/bottom_border"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/_8dp_margin_Top" />
        <TextView
            android:id="@+id/edit_profile_description_word_count"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/initial_edit_desc_word_count"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_border" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp_margin_Top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_profile_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/please_click_btn_to_sel_the_date"
            android:clickable="true"
            android:focusable="true"
            android:maxLines="1"
            android:padding="@dimen/_12dp_padding"
            android:textSize="@dimen/_10sp_text_size"
            android:background="@drawable/bottom_border"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/_8dp_margin_Top"
            android:singleLine="true" />

        <Button
            android:id="@+id/edit_profile_birth_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp_margin_Top"
            android:textColor="@color/colorWhite"
            android:text="@string/select_birth_date"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="3"/>

    </LinearLayout>

    <Button
        android:id="@+id/edit_save_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp_raw"
        android:textColor="@color/colorWhite"
        android:text="@string/save_edit"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/_12dp_padding"/>


</LinearLayout>